tests/ui/precondition-is-not-an-expression.stderr
error: expected an expression as argument

  = help: example syntax: `#[precondition(argument % 2 == 0)]`

 --> $DIR/precondition-is-not-an-expression.rs:2:15
  |
2 | #[precondition(struct)]
  |               ^^^^^^^^
