tests/ui/precondition-is-not-an-expression.rs
#[contracts::contracts]
#[precondition(struct)]
fn f() {}

fn main() {}
